[package]
name = "indexer1"
version = "0.1.0"
edition = "2021"
authors = ["BadConfig <array.clean@gmail.com>"]
description = "A library that is used to collect events from EVM compatible blockchain"
repository = "https://github.com/badconfig/indexer1"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.79"
alloy = { version = "0.8.3", features = ["full", "serde", "reqwest-rustls-tls", "node-bindings", "sol-types"] }

sha2 = "0.10.8"
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio-stream = { version = "0.1.17", features = ["time"] }
serde_yml = "0.0.12"

[dev-dependencies]
alloy-sol-types = { version = "0.8.19"}
alloy-contract = { version = "0.9.2", features = ["pubsub"] }
