[package]
name = "indexer1"
version = "0.2.5"
edition = "2021"
authors = ["BadConfig <array.clean@gmail.com>"]
description = "A library that is used to collect events from EVM compatible blockchain"
repository = "https://github.com/badconfig/indexer1"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.79"

alloy = { version = "0.11.1", default-features = false, features = ["serde", "reqwest-rustls-tls", "essentials", "std", "pubsub", "provider-ws", "rpc-client-ws", "node-bindings"] }

sha2 = "0.10.8"
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "sqlite"] }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
serde_yml = "0.0.12"
tokio-stream = { version = "0.1.17", features = ["time"] }

log = { version = "0.4.21", features = ["kv", "kv_serde"] }
